--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "fibonacci",
+  "name": "@aschemelev/fiblib",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,10 +11,16 @@
     "url": "git+https://github.com/AntiHero/Fibonacci.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Aleksandr Schemelev",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/AntiHero/Fibonacci/issues"
   },
-  "homepage": "https://github.com/AntiHero/Fibonacci#readme"
+  "homepage": "https://github.com/AntiHero/Fibonacci#readme",
+  "devDependencies": {
+    "@types/jest": "^26.0.23",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.6",
+    "typescript": "^4.2.4"
+  }
 }
